# snnow

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  Makefile  Makefile.bak  NNParser.conf  State.h  compile.sh  main.cpp  make.error  nohup.out
chunker/: Makefile
chunker/beamchunker/: BatchBeamDecoder.cu  Beam.h  BeamChunker.cu  BeamChunker.h  BeamDecoder.cu  BeamDecoder.h  BeamExample.h  TNNets.cu  TNNets.h
chunker/common/: ActionStandardSystem.h  Config.cpp  Config.h  DictManager.cpp  DictManager.h  Dictionary.h  FeatureEmbedding.cu  FeatureEmbeddingManager.cu  FeatureEmbeddingManager.h  FeatureManager.h  FeatureType.h  FeatureVector.h  Instance.h  LabeledSequence.h  State.h
chunker/greedychunker/: GreedyChunker.cu  GreedyChunker.h  GreedyChunkerThread.cu
cmake/: FindOpenBLAS.cmake
make/: config.mk  mshadow.mk
model/20160126-17:22:16/: Configuration.ini
results/: output.20151218-21:32:20  output.20151223-15:50:26  output.20151223-18:23:22
src/: CMakeLists.txt  DepAction_test.cpp  Dict_test.cpp  tags
src/chunker/: ActionStandardSystem.cpp  ActionStandardSystem.h  Beam.cpp  Beam.h  BeamDecoder.h  ChunkedSentence.h  Chunker.cu  Chunker.h  ChunkerDataManager.cpp  ChunkerDataManager.h  Config.cpp  Config.h  DataManager.cpp  DataManager.h  DictManager.cpp  DictManager.h  Dictionary.cpp  Dictionary.h  Evalb.h  Example.h  FeatureEmbedding.h  FeatureEmbeddingManager.h  FeatureExtractor.cpp  FeatureExtractor.h  FeatureManager.cpp  FeatureManager.h  FeatureType.cpp  FeatureType.h  FeatureVector.h  GreedyChunker.cu  GreedyChunker.h  Instance.h  \  (+20 more)
(+162 files in other folders)
